--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap"
     rel="stylesheet"
   />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
     <title>Screen Recorder</title>
   </head>
   <body>
